fix (wp5.9): misaligned stackable global colors. (#2112) fixes #2093
* Fixed misaligned stackable global colors.

* edito.scss

* Changed the margins.

* minor adjustments to the plus icon

--- a/src/plugins/global-settings/colors/editor.scss
+++ b/src/plugins/global-settings/colors/editor.scss
@@ -19,9 +19,9 @@
 }
 
 .ugb-global-settings-color-picker__add-icon {
-	min-width: 30px !important;
-	width: 30px;
-	height: 30px;
+	min-width: 28px !important;
+	width: 28px;
+	height: 28px;
 	border-radius: 50%;
 	svg {
 		width: 20px;
@@ -61,3 +61,7 @@
 	}
 }
 
+.ugb-global-settings-color-picker__add-icon,
+.ugb-global-settings-color-picker .components-circular-option-picker__option-wrapper {
+	margin: 0px 12px 12px 0px;
+}
